--- a/about.html
+++ b/about.html
@@ -24,10 +24,10 @@
         </div>
     </header>
     <div class="content">
-        <p>Турнир шрифтов – это творческое состязание, направленное на выявление лучших шрифтовых дизайнеров и их работ. Участники турнира представляют свои уникальные шрифты, которые оцениваются жюри</p>
+        <p>Турнир шрифтов – это творческое состязание, направленное на выявление лучших шрифтовых дизайнеров и их работ. Участники турнира представляют свои уникальные шрифты, которые оцениваются жюри</p>
         <div class="line_figure"></div>
-        <img src="images/letters.svg" alt="">
-        <p>Цель турнира — не только определить лучшие шрифты, но и способствовать развитию индустрии, обмену опытом и знаниями между участниками, а также стимулировать создание новых интересных и качественных шрифтов</p>
+        <div class="aboutImg"></div>
+        <p>Цель турнира — не только определить лучшие шрифты, но и способствовать развитию индустрии, обмену опытом и знаниями между участниками, а также стимулировать создание новых интересных шрифтов</p>
     </div>
     <div class="menu_popup" id="menuPopup">
         <a class="menu_popup_item" href="about.html">Что такое турнир шрифтов?</a>
